add bug information for nginx1.2.4

--- a/nginx1.2.4/Dockerfile
+++ b/nginx1.2.4/Dockerfile
@@ -3,7 +3,7 @@
 # worker process segmentation fault
 FROM debian:latest
 RUN apt-get update && apt-get install -y build-essential perl
-RUN apt-get update && apt-get install -y gcc libc6-dev make
+RUN apt-get update && apt-get install -y gcc libc6-dev make gdb
 RUN apt-get update && apt-get install -y linux-headers-$(dpkg --print-architecture)
 RUN apt-get update && apt-get install -y wget curl procps file
 RUN apt-get update && apt-get install -y git
