sqlite-b899b60 add failure sketch

--- a/sqlite-b899b60/Dockerfile
+++ b/sqlite-b899b60/Dockerfile
@@ -10,4 +10,5 @@ COPY test.sqlite /tmp/test.sqlite
 WORKDIR /tmp/SQLite-$checkin
 RUN ./configure && make && make install
 WORKDIR /tmp
+RUN apt-get update && apt-get install -y vim
 CMD sqlite3 < test.sqlite
