--- a/nginx-503/nginx.conf
+++ b/nginx-503/nginx.conf
@@ -8,6 +8,10 @@ events {
 }
 
 http {
+    log_format upstreamlog '[$time_local] $remote_addr - $remote_user - $server_name to: $upstream_addr: $request upstream_response_time $upstream_response_time msec $msec request_time $request_time';
+
+    access_log  logs/access.log upstreamlog;
+    
     map $http_upgrade $connection_upgrade {
         default upgrade;
         '' close;
@@ -18,6 +22,7 @@ http {
     }
  
     server {
+        access_log logs/access.log;
         listen 8020;
         location / {
             proxy_pass http://websocket;
