--- a/sqlite-e8275b4/Dockerfile
+++ b/sqlite-e8275b4/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get update && apt-get install -y gcc libc6-dev make gdb
 RUN apt-get update && apt-get install -y tcl-dev tk-dev
 RUN apt-get update && apt-get install -y file vim wget
 WORKDIR /tmp
-COPY test.sqlite /tmp/test.sqlite
 RUN wget https://www.sqlite.org/src/tarball/$checkin/SQLite-$checkin.tar.gz
 RUN tar -xvf SQLite-$checkin.tar.gz && rm SQLite-$checkin.tar.gz
 WORKDIR /tmp/SQLite-$checkin
 ENV CFLAGS='-g3 -O0'
 RUN ./configure --enable-debug && make -j8 && make install
 WORKDIR /tmp
+COPY *.sqlite /tmp/
 CMD sqlite3 < test1.sqlite
