add missing CMD to dockerfile

--- a/php-76041/Dockerfile
+++ b/php-76041/Dockerfile
@@ -10,3 +10,5 @@ RUN tar -zxf php-$VERSION.tar.gz && rm php-$VERSION.tar.gz
 WORKDIR /tmp/php-$VERSION
 RUN ./configure --with-gd CFLAGS="-O0 -g3" && make -j32 && make install
 COPY poc.php /tmp/
+WORKDIR /tmp
+CMD php poc.php
