fix typo in command

--- a/php-74194/Dockerfile
+++ b/php-74194/Dockerfile
@@ -10,4 +10,4 @@ WORKDIR /tmp/php-$VERSION
 RUN ./configure CFLAGS="-O0 -g3" && make -j32 && make install
 COPY poc.php data /tmp/
 WORKDIR /tmp
-CMD php -f poc.py data
+CMD php -f poc.php data
