--- a/memcached1.5.6/Dockerfile
+++ b/memcached1.5.6/Dockerfile
@@ -4,7 +4,21 @@ FROM ubuntu:18.04
 COPY ReproduceMemcachedSegfault-1.0-SNAPSHOT-shaded.jar /
 
 RUN apt-get update
-RUN apt-get install -y wget libevent-dev libsasl2-dev gcc make 
+RUN apt-get install -y apt-utils wget libevent-dev libsasl2-dev gcc make
+# for make test
+RUN apt-get install -y perl libmemcached-tools sasl2-bin software-properties-common
+RUN apt install -y openjdk-8-jdk openjdk-8-jre
+RUN mkdir -p /etc/sasl2
+
+COPY memcached.conf /etc/sasl2
+
 ARG version=1.5.6
+RUN wget https://www.memcached.org/files/memcached-$version.tar.gz
+RUN tar -zxvf memcached-$version.tar.gz && rm memcached-$version.tar.gz
+WORKDIR /memcached-$version
+RUN ./configure --enable-sasl && make && make test && make install
+WORKDIR /
+
+CMD  memcached -S -v -u root & java -jar ReproduceMemcachedSegfault-1.0-SNAPSHOT-shaded.jar sammy test localhost 11211
 
 
