Update automation scripts: seperate POSIX_ARGS and REPLAY_POSIX_ARGS from APP_ARGS

--- a/php-74194/Makefile
+++ b/php-74194/Makefile
@@ -4,7 +4,7 @@ VERSION:=7.1.6
 NAME:=php-${VERSION}
 SRCTAR:=${NAME}.tar.xz
 APP_ARGS=$(1)
-REPLAY_ARGS:=-sym-file poc.php -sym-file data
+REPLAY_POSIX_ARGS:=-sym-file poc.php -sym-file data
 ENVFILE:=php/php_env
 SOLVERTIMEOUT:=30s
 ORACLE_KTEST:=php/oracle.ktest
