Update automation scripts: add `klee_prerequisite` option for customized cleanup
This is mainly for the python failure which writes to files.
Also fix some application building process.

--- a/php-74194/Makefile
+++ b/php-74194/Makefile
@@ -15,7 +15,7 @@ ${SRCTAR}:
 	wget https://www.php.net/distributions/${SRCTAR}
 ${NAME}: ${SRCTAR}
 	tar xf ${SRCTAR}
-	patch -p1 -d ${NAME} < ${NAME}.klee.patch
+	patch -p1 -N -r - -d ${NAME} < ${NAME}.klee.patch
 build/%: ${NAME}
 	mkdir -p build
 	cd build && CC=wllvm ../${NAME}/configure --disable-all --disable-cgi --without-pcre-jit
