try to fix python
Trigger the failure once after build. See if that prevents later
record/replay issues (hit invalid branch and ridiculous high instruction
frequency).

--- a/python-2018-1000030/Makefile
+++ b/python-2018-1000030/Makefile
@@ -18,6 +18,7 @@ build: ${SRCDIR}/configure
 	cd build && CXX=wllvm++ CC=wllvm ../${SRCDIR}/configure --disable-profiling --disable-optimizations --disable-toolbox-glue --disable-ipv6 --disable-big-digits--without-valgrind --without-tsc --without-gcc LDFLAGS='-Wl,-no-export-dynamic -static' LINKFORSHARED=" " --disable-shared
 	cp Setup.local build/Modules/Setup.local
 	make -C build -j`nproc`
+	build/python readahead.py || true
 build/%: build;
 python.bc: build/python
 	extract-bc $<
